[tool.poetry]
name = "solvetheproblem-2"
version = "0.1.0"
description = ""
authors = ["taeinsoul <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
